{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "14d5f475-bc23-6325-d7a7-a3f54825ffcd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nur_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:loadbalancer/app/nurlb/8af34b90314f46e7",
            "arn_suffix": "app/nurlb/8af34b90314f46e7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nurlb-497582648.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:loadbalancer/app/nurlb/8af34b90314f46e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nurlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03556398ea8af0085"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d30ae663972798d"
              },
              {
                "subnet_id": "subnet-0e278c793b5e15857"
              },
              {
                "subnet_id": "subnet-0fa7e0702e3278220"
              }
            ],
            "subnets": [
              "subnet-05d30ae663972798d",
              "subnet-0e278c793b5e15857",
              "subnet-0fa7e0702e3278220"
            ],
            "vpc_id": "vpc-0e95f97decc20f682",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nur_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:listener/app/nurlb/8af34b90314f46e7/474575b02277cf34",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:targetgroup/target-nur/c1e84cd8245de2be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:listener/app/nurlb/8af34b90314f46e7/474575b02277cf34",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:loadbalancer/app/nurlb/8af34b90314f46e7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nur_lb",
            "aws_lb_target_group.nur_target",
            "aws_security_group.allow_all",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nur_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:targetgroup/target-nur/c1e84cd8245de2be",
            "arn_suffix": "targetgroup/target-nur/c1e84cd8245de2be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:475775181858:targetgroup/target-nur/c1e84cd8245de2be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-nur",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e95f97decc20f682"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:475775181858:security-group/sg-03556398ea8af0085",
            "description": "Allow All inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03556398ea8af0085",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e95f97decc20f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    }
  ]
}